# City17

./: .gitignore  Cargo.toml  README.md
crates/city17-api/: Cargo.toml
crates/city17-api/src/: main.rs  repo.rs  tracer.rs
crates/city17-api/src/api/: error.rs  mod.rs  symbols.rs
crates/city17-api/src/operations/: error.rs  list_symbols.rs  mod.rs
crates/city17-cli/: Cargo.toml
crates/city17-cli/src/: main.rs
docker/: .env  compose.yml
internal-crates/catacombs17-shaft/: Cargo.toml
internal-crates/catacombs17-shaft/src/: cli.rs  command_line.rs  error.rs  main.rs
internal-crates/catacombs17-shaft/src/internal_operations/: get_docker_compose_file_location.rs  get_workspace_location.rs  mod.rs
internal-crates/catacombs17-shaft/src/operations/: create_and_start_containers.rs  create_docker_compose_postgres_env_file.rs  error.rs  get_docker_compose_config.rs  get_docker_compose_datbase_env.rs  install_sqlx_cli.rs  mod.rs  revert_migration.rs  run_migrations.rs  stop_and_remove_containers.rs
internal-crates/catacombs17-storage/: Cargo.toml
internal-crates/catacombs17-storage/.sqlx/: query-008a960bb07f93226abdd196a28cb4c798c5a2acf8e92f817a081f58cd15a5dc.json  query-06b6189019b72dbc251349206d4febf05892be6c6297e0c6e37e5f5935e7fe90.json  query-34c537eac48d51a62255fca8e71dbb1f790a8d9242b0f3379a63a680567a504f.json  query-7ad5dc60dd0fdd87bc268e4ebb55918c5821f93b7ffa3c096721aca8cac9b603.json  query-c4874e6623667cf051d83017d48e0551f7fbb1e0bad73e9aa4f43a21b7b153ea.json  query-e0851554a108363dd363866937b0da3da07d2f7852552308600b14954b3c15b4.json
internal-crates/catacombs17-storage/migrations/: 20250522135218_create_wisdom.down.sql  20250522135218_create_wisdom.up.sql  20250522183910_create_symbols.down.sql  20250522183910_create_symbols.up.sql
internal-crates/catacombs17-storage/src/: lib.rs
internal-crates/catacombs17-storage/src/wisdom/: symbols.rs
internal-crates/catacombs17-storage/tests/: main.rs  support.rs
internal-crates/catacombs17-storage/tests/wisdom/symbols/: create_symbol_test.rs  delete_symbol_test.rs  list_symbols_test.rs  mod.rs  update_symbol_test.rs
internal-crates/catacombs17-storage/tests/wisdom/symbols/fixtures/: symbols.sql
internal-crates/devkit/: Cargo.toml
internal-crates/devkit/src/: cli.rs  command_line.rs  error.rs  main.rs
internal-crates/devkit/src/internal_operations/: get_docker_compose_file_location.rs  get_workspace_location.rs
internal-crates/devkit/src/operations/: create_and_start_containers.rs  create_database.rs  create_docker_compose_postgres_env_file.rs  create_migration.rs  create_query_metadata.rs  enter_database_cli.rs  generate_uuid.rs  get_database_url.rs  get_docker_compose_config.rs  get_docker_compose_datbase_env.rs  install_sqlx_cli.rs  mod.rs  (+4 more)
