[workspace]
resolver = "3"
members = ["crates/*", "internal-crates/*"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
chrono = { version = "0.4.41" }
clap = { version = "4.5.38" }
eyre = { version = "0.6.12" }
rand = { version = "0.9.1" }
sqlx = { version = "0.8.5" }
thiserror = { version = "2.0.12" }
uuid = { version = "1.16.0" }
