[workspace]
resolver = "3"
members = ["crates/*", "internal-crates/*"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
base64 = { version = "0.22.1" }
chrono = { version = "0.4.41" }
clap = { version = "4.5.38" }
eyre = { version = "0.6.12" }
rand = { version = "0.9.1" }
serde = { version = "1.0.219" }
serde_json = { version = "1.0.140" }
sqlx = { version = "0.8.5" }
thiserror = { version = "2.0.12" }
tracing = { version = "0.1.41" }
uuid = { version = "1.16.0" }

catacombs17-storage = { path = "internal-crates/catacombs17-storage" }
