[package]
name = "city17-api"
version = "0.1.0"
edition.workspace = true

[dependencies]
base64 = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive"] }
eyre = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["postgres"] }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["serde"] }

# api
rocket = { version = "0.5.1", features = ["json"] }

# tracing
opentelemetry = "0.28.0"
opentelemetry_sdk = "0.28.0"
opentelemetry-otlp = { version = "0.28.0", features = ["grpc-tonic"] }
tracing-core = "0.1.33"
tracing-opentelemetry = "0.29.0"
tracing-subscriber = "0.3.19"

# internal crates
catacombs17-storage = { workspace = true }
