[package]
name = "catacombs17-storage"
version = "0.1.0"
edition.workspace = true

[dependencies]
chrono = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true, features = [
    "chrono",
    "postgres",
    "runtime-tokio",
    "uuid",
] }
uuid = { workspace = true, features = ["v7", "serde"] }
eyre = { workspace = true }
